# multiClock

./: README.md  io.github.r_sergii.multiClock.json  meson.build
data/: io.github.r_sergii.multiClock.appdata.xml.in  io.github.r_sergii.multiClock.desktop.in  io.github.r_sergii.multiClock.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  meson.build  multiclock.gresource.xml
src/services/appsload/: appsload_provider.vala
src/services/clock/: clock_model.vala  clock_provider.vala  clock_service.vala
src/services/connect/: connect_model.vala  connect_provider.vala
src/services/settings/: settings_service.vala
src/services/translate/: translate_provider.vala  translate_service.vala
src/views/: horiz_big_view.vala  vert_big_view.vala
src/widgets/custom-menu-item/: custom-menu-item.vala
src/widgets/theme_switcher/: theme_switcher.vala
src/windows/language_window/: language_window.vala
src/windows/main_window/: main_window.vala
src/windows/splash_window/: splash_window.vala
src/windows/towns_window/: towns_window.vala
